--- a/trunk/o3d/o3dProcedural/main.html
+++ b/trunk/o3d/o3dProcedural/main.html
@@ -11,9 +11,10 @@ o3dPlanet
 
 <div id="o3d" style="width: 1280px; height: 720px;"></div>
 <script type="text/javascript" src="o3djs/base.js"></script>
+<script type="text/javascript" src="Square.js"></script>
+<script type="text/javascript" src="PermMatrix.js"></script>
 <script type="text/javascript" src="Patch.js"></script>
 <script type="text/javascript" src="Heightmap.js"></script>
-<script type="text/javascript" src="Square.js"></script>
 <script type="text/javascript" src="o3dProcedural.js"></script>
 
 </body>
